[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alumni-osint-recon-pipeline"
version = "1.0.0"
description = "Automated OSINT data collection pipeline for alumni/company profile datasets"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "OmarElkhali", email = "omarelkhali@gmail.com"}
]
dependencies = [
  "patchright>=1.58.0",
  "httpx>=0.27.0",
  "nest_asyncio>=1.6.0"
]

[project.optional-dependencies]
ui = [
  "streamlit>=1.30.0"
]
face = [
  "face_recognition>=1.3.0",
  "Pillow>=10.0.0",
  "numpy>=1.24.0"
]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
phase1-run = "run_phase1_pipeline:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
